# MercBotPy

./: README.md  pyproject.toml
.codebuddy/: summary.md
.github/workflows/: test.yml
dashboard/: app.py  manage.py  models.py  settings.py  urls.py  wsgi.py
dashboard/frontend/: urls.py  views.py
dashboard/game_data/: models.py
dashboard/game_data/migrations/: 0001_initial.py  0002_alter_region_id_alter_sync_id_alter_town_id_and_more.py  0003_buildingtype_buildingupgrade_classlevel_classtype_and_more.py
dashboard/static/: mercatorio.css
data/: mercbot.db
info/: mercatorio_summary.md  mercbot_summary.txt  pymerc_summary.txt  static.js  staticjson.json  staticjson2.json  towns.json
mercbot/: bot.py  bot_utils.py  init_settings.py  main.py  settings.py  setup_database.py
mercbot/models/: database.py  settings.py
mercbot/setup/: initialize.py  setup_database.py
mercbot/utils/: client.py  market.py  production.py  scheduler.py
tests/: __init__.py  test_dashboard.py  test_initialize.py  test_production.py  test_webapp.py
webapp/: app.py  manage.py  models.py  settings.py
webapp/frontend/: views.py
webapp/templates/: index.html
webapp/webapp/: settings.py  urls.py
