[tool.poetry]
name = "mercbot"
version = "0.1.0"
description = "MercBot is an intelligent automation tool for the online game Mercatorio. This bot aims to maximize prestige and profit for in-game characters by automating various gameplay aspects, including item balancing, production management, and market interactions. The bot can handle multiple accounts and dynamically determine production chains based on available buildings and transports. Designed for flexibility and extensibility, MercBot leverages the pymerc library for game API interactions and includes robust settings management with SQLite database support."
authors = ["Garrett Griffin-Morales <grgisme@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
initialize-settings = "mercbot.init_settings:main"
run-bot = "mercbot.bot:main"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.3"
aiohttp = "^3.9.5"
python-dotenv = "^1.0.1"
pymerc = {git = "https://github.com/garrett-griffin/pymerc"}
pytest = "^8.2.2"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
